<?xml version="1.0" encoding="utf-8"?>
<!--
   Kantcoin Project
   https://kantcoin.org
   This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0.
   If a copy of the MPL was not distributed with this file, You can obtain one at https://mozilla.org/MPL/2.0/.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_launcher_foreground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#8080a4"
            android:textSize="48sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="90dp"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:layout_marginBottom="80dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_logo_dark">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:padding="5dp"
                android:scaleX="1.8"
                android:scaleY="1.8"
                android:src="@mipmap/ic_launcher"
                android:translationX="10dp" />
        </RelativeLayout>

        <Button
            android:id="@+id/home_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/roundedbutton"
            android:onClick="onHomeButton"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/home_button" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@android:color/transparent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/phone_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedbutton"
                android:onClick="onLoginPhone"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/phone_button" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/new_label"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/email_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedbutton"
                android:onClick="onLoginEmail"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/email_button" />


        </LinearLayout>

        <Button
            android:id="@+id/import_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="45dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/roundedbutton"
            android:onClick="onImportButton"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/import_button" />
    </LinearLayout>
</ScrollView>
