<?xml version="1.0" encoding="utf-8"?>
<!--
 * Kantpoll Project
 * https://github.com/kantpoll
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/import_toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="#7989b9"
            android:elevation="2dp"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            android:theme="?attr/actionBarTheme"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="sans-serif-black"
                android:text="@string/app_name"
                android:textSize="22sp"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>


        <TextView
            android:id="@+id/import_label"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_thin"
            android:gravity="start|center_vertical"
            android:textColor="#404050"
            android:textSize="18sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/vault_username"
            android:textColorHint="#707090"
            app:hintEnabled="true">

            <EditText
                android:id="@+id/username_et"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical|start"
                android:inputType="text"
                android:textColor="#404050"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/vault_password"
            android:textColorHint="#707090"
            app:hintEnabled="true">

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical|start"
                android:inputType="textPassword"
                android:textColor="#404050"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/vault_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/vault_content"
            android:textColorHint="#707090"
            app:hintEnabled="true">

            <EditText
                android:id="@+id/vault_et"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:fontFamily="sans-serif"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:textColor="#404050"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/import_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:background="#7989b9"
            android:onClick="importVault" />

    </LinearLayout>
</ScrollView>
